...
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_students"
            android:icon="@android:drawable/btn_star"
            android:title="@string/menu_students" />
        <item
            android:id="@+id/nav_lehrstoff"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/menu_lehrstoff" />

        <item
            android:id="@+id/nav_lehrstoff_list"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/menu_lehrstoffübersicht" />


    </group>
</menu>
